Resolved responsive layout issues in Partner Analytics module.

--- a/src/app/campaigns/preview-campaign/preview-campaign.component.css
+++ b/src/app/campaigns/preview-campaign/preview-campaign.component.css
@@ -191,3 +191,7 @@ legend.scheduler-border {
   padding: 5px;
   border-radius: 3px;
 }
+.modal-copy-close{
+    width: 28px;
+    height: 28px;
+}
